--- a/SongLib/src/view/SongLib.fxml
+++ b/SongLib/src/view/SongLib.fxml
@@ -1,18 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<GridPane prefHeight="479.0" prefWidth="819.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<GridPane prefHeight="551.0" prefWidth="818.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="456.51019287109375" minHeight="10.0" prefHeight="456.51019287109375" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="395.98101806640625" minHeight="10.0" prefHeight="94.48980712890625" vgrow="SOMETIMES" />
   </rowConstraints>
+   <children>
+      <GridPane>
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <ListView prefHeight="200.0" prefWidth="200.0" />
+         </children>
+      </GridPane>
+      <GridPane hgap="10.0" vgap="10.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="86.0" text="Edit" GridPane.halignment="CENTER" />
+            <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="86.0" text="Add" GridPane.halignment="LEFT" />
+            <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="86.0" text="Delete" GridPane.halignment="RIGHT" />
+         </children>
+         <padding>
+            <Insets bottom="10.0" left="250.0" right="250.0" top="10.0" />
+         </padding>
+      </GridPane>
+   </children>
 </GridPane>
