--- a/SongLib/src/view/SongLib.fxml
+++ b/SongLib/src/view/SongLib.fxml
@@ -7,13 +7,17 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane prefHeight="551.0" prefWidth="818.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane 
+	prefHeight="551.0" prefWidth="818.0" 
+	xmlns="http://javafx.com/javafx/8.0.171" 
+	xmlns:fx="http://javafx.com/fxml/1" 
+	fx:controller="view.SongLibController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="456.51019287109375" minHeight="10.0" prefHeight="456.51019287109375" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="395.98101806640625" minHeight="10.0" prefHeight="94.48980712890625" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="456" minHeight="10.0" prefHeight="456" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="395" minHeight="10.0" prefHeight="94" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <GridPane>
@@ -25,7 +29,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <ListView prefHeight="200.0" prefWidth="200.0" />
+            <ListView fx:id="listView" prefHeight="200.0" prefWidth="200.0" />
          </children>
       </GridPane>
       <GridPane hgap="10.0" vgap="10.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
