--- a/SongLib/src/view/SongLib.fxml
+++ b/SongLib/src/view/SongLib.fxml
@@ -3,21 +3,19 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane 
-	prefHeight="551.0" prefWidth="818.0" 
-	xmlns="http://javafx.com/javafx/8.0.171" 
-	xmlns:fx="http://javafx.com/fxml/1" 
-	fx:controller="view.SongLibController">
+<GridPane prefHeight="551.0" prefWidth="818.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.SongLibController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints maxHeight="456" minHeight="10.0" prefHeight="456" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="395" minHeight="10.0" prefHeight="94" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="395.0" minHeight="10.0" prefHeight="94.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <GridPane>
@@ -46,6 +44,26 @@
          </children>
          <padding>
             <Insets bottom="10.0" left="250.0" right="250.0" top="10.0" />
+         </padding>
+      </GridPane>
+      <GridPane hgap="10.0" GridPane.rowIndex="2">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <TextField maxWidth="-Infinity" prefHeight="27.0" prefWidth="200.0" promptText="Song Name" />
+            <TextField maxWidth="-Infinity" prefWidth="200.0" promptText="Artist" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+            <TextField layoutX="218.0" layoutY="28.0" maxWidth="-Infinity" prefWidth="200.0" promptText="Album" GridPane.columnIndex="2" />
+            <TextField layoutX="10.0" layoutY="28.0" maxWidth="-Infinity" prefWidth="200.0" promptText="Year" GridPane.columnIndex="3" />
+         </children>
+         <padding>
+            <Insets left="10.0" right="10.0" />
          </padding>
       </GridPane>
    </children>
